--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/libs/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/main.css" media="print">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -15,18 +16,37 @@
 </head>
 
 <body>
-    <nav>
+
         <nav class="navbar" role="navigation">
-            <ul class="nav-container">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="#">item1</a></li>
-                <li><a href="#">item1</a></li>
-                <li><a href="#">item1</a></li>
-                <li><a href="#">item1</a></li>
+            <button class="button_hidden"><h1>
+            <i class="fa fa-bars" aria-hidden="true"></i></h1></button>
+            <ul>
+                <li>
+                    <a href="index.html">
+                        <h1><i class="menu_button fa fa-home" aria-hidden="true"></h1></i>&nbsp&nbspГлавная
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        <h1><i class="menu_button fa fa-envira" aria-hidden="true"></h1></i>&nbsp&nbsp&nbspПриложения
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        <h1><i class="menu_button fa fa-book" aria-hidden="true"></h1></i>&nbsp&nbsp&nbspКниги
+                    </a>
+                </li>
+                <li>
+                    <a href="index.html">
+                        <h1><i class="menu_button fa fa-bolt" aria-hidden="true"></h1></i>&nbsp&nbsp&nbspПоддержка
+                    </a>
+                </li>
+
+
             </ul>
         </nav>
         <!-- </div> -->
-    </nav>
+
     <div class="container">
         <header class="fluid-bg">
             <div class="row">
@@ -57,15 +77,18 @@
                 </div>
             </div>
             <footer>
-                <div class="row">
-                    <div class="cols col-12">
-                        <h1>footer</h1>
+
                     </div>
                 </div>
             </footer>
         </div>
+
+
+        <!-- </div> -->
+
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="js/site.js"></script>
+        <script src="js/nav_button.js"></script>
 </body>
 
 </html>
