--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Grid</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/libs/font-awesome-4.6.3/css/font-awesome.min.css">
+    <link rel="stylesheet" href="libs/font-awesome-4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/main.css" media="print">
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -89,6 +89,7 @@
         <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
         <script src="js/site.js"></script>
         <script src="js/nav_button.js"></script>
+
 </body>
 
 </html>
