--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
 
 <body>
 
+
         <nav class="navbar" role="navigation">
-            <button class="button_hidden"><h1>
-            <i class="fa fa-bars" aria-hidden="true"></i></h1></button>
+            <button class="button_hidden">
+            <h1><i class="fa fa-bars" aria-hidden="true"></i></h1></button>
             <ul>
                 <li>
                     <a href="index.html">
-                        <h1><i class="menu_button fa fa-home" aria-hidden="true"></h1></i>&nbsp&nbspГлавная
+                        <i class="menu_button fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
                     </a>
                 </li>
                 <li>
                     <a href="index.html">
-                        <h1><i class="menu_button fa fa-envira" aria-hidden="true"></h1></i>&nbsp&nbsp&nbspПриложения
+                        <i class="menu_button fa fa-envira" aria-hidden="true"></i>&nbsp&nbsp&nbspПриложения
                     </a>
                 </li>
                 <li>
                     <a href="index.html">
-                        <h1><i class="menu_button fa fa-book" aria-hidden="true"></h1></i>&nbsp&nbsp&nbspКниги
+                        <i class="menu_button fa fa-book" aria-hidden="true"></i>&nbsp&nbsp&nbspКниги
                     </a>
                 </li>
                 <li>
                     <a href="index.html">
-                        <h1><i class="menu_button fa fa-bolt" aria-hidden="true"></h1></i>&nbsp&nbsp&nbspПоддержка
+                        <i class="menu_button fa fa-bolt" aria-hidden="true"></i>&nbsp&nbsp&nbspПоддержка
                     </a>
                 </li>
 
