--- a/index.html
+++ b/index.html
@@ -16,38 +16,33 @@
 </head>
 
 <body>
-
-
-        <nav class="navbar" role="navigation">
-            <button class="button_hidden">
+    <nav class="navbar" role="navigation">
+        <button class="button_hidden">
             <h1><i class="fa fa-bars" aria-hidden="true"></i></h1></button>
-            <ul>
-                <li>
-                    <a href="index.html">
-                        <i class="menu_button fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html">
-                        <i class="menu_button fa fa-envira" aria-hidden="true"></i>&nbsp&nbsp&nbspПриложения
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html">
-                        <i class="menu_button fa fa-book" aria-hidden="true"></i>&nbsp&nbsp&nbspКниги
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html">
-                        <i class="menu_button fa fa-bolt" aria-hidden="true"></i>&nbsp&nbsp&nbspПоддержка
-                    </a>
-                </li>
-
-
-            </ul>
-        </nav>
-        <!-- </div> -->
-
+        <ul class="menu_button">
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-download" aria-hidden="true"></i>&nbsp&nbspЗагрузки
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-book" aria-hidden="true"></i>&nbsp&nbspКниги
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-bolt" aria-hidden="true"></i>&nbsp&nbspПоддержка
+                </a>
+            </li>
+        </ul>
+    </nav>
+    <!-- </div> -->
     <div class="container">
         <header class="fluid-bg">
             <div class="row">
@@ -78,19 +73,14 @@
                 </div>
             </div>
             <footer>
-
-                    </div>
-                </div>
-            </footer>
         </div>
-
-
-        <!-- </div> -->
-
-        <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-        <script src="js/site.js"></script>
-        <script src="js/nav_button.js"></script>
-
+        </div>
+        </footer>
+    </div>
+    <!-- </div> -->
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="js/site.js"></script>
+    <script src="js/nav_button.js"></script>
 </body>
 
 </html>
