--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/site.js"></script>
     <script src="js/nav_button.js"></script>
+    <!-- <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 </body>
 
 </html>
