--- a/index.html
+++ b/index.html
@@ -43,18 +43,24 @@
         </ul>
     </nav>
     <!-- </div> -->
-    <div class="container">
+
         <header class="fluid-bg">
-            <div class="row">
-                <div class="cols col-12 ">
-                    <div></div>
+           <div class="container">
+                <div class="row">
+                    <div class="cols col-4">
+          <h1>My site</h1>
+          <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+      <a class="batton_header" href="#" role="button">Sign up for Free!</a>
+        </div>
+        <div class="cols col-8">
+
                 </div>
-                <!-- </div> -->
+            </div>
         </header>
         <!-- <img src="http://lorempixel.com/1680/600/sports/3" alt="alt"> -->
         <div class="content">
             <div class="row">
-                <div class="col-4 cols">
+                <div class="col-3 cols">
                     <h2>Подзаголовок</h2>
                     <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Ему несколько, рот залетают знаках жизни проектах, вершину по всей переписали переписывается домах за от всех власти парадигматическая путь назад, они обеспечивает!</p>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non deserunt, sunt animi magnam dolore fugiat optio rem quia accusantium, architecto quas aliquam ullam tenetur doloribus dignissimos nisi. Architecto, distinctio, eligendi.</div>
@@ -63,18 +69,18 @@
                     <div>Autem, debitis quaerat dignissimos reiciendis non labore ipsa ab repellendus. A odit est inventore nobis placeat velit laboriosam accusamus, tempore modi, odio saepe facere iste delectus deserunt sequi! Quae, vitae.</div>
                     <div>Vel deleniti eos natus voluptas, officiis quibusdam vero iure, consequuntur odio, atque voluptate delectus vitae rem aliquam alias ipsum necessitatibus perferendis! Quisquam quasi ad itaque ut fugit reiciendis maiores, praesentium.</div>
                 </div>
-                <div class="col-4 cols">
-                    <h2>Подзаголовок</h2>
+                <div class="col-9 cols">
+                    <h2>main</h2>
                     <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Ему несколько, рот залетают знаках жизни проектах, вершину по всей переписали переписывается домах за от всех власти парадигматическая путь назад, они обеспечивает!</p>
                 </div>
-                <div class="col-4 cols">
-                    <h2>Подзаголовок</h2>
-                    <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Ему несколько, рот залетают знаках жизни проектах, вершину по всей переписали переписывается домах за от всех власти парадигматическая путь назад, они обеспечивает!</p>
-                </div>
+
             </div>
             <footer>
-        </div>
-        </div>
+        <ul>
+            <li>footer</li>
+            <li>footer</li>
+            <li>footer</li>
+        </ul>
         </footer>
     </div>
     <!-- </div> -->
