--- a/indexold.html
+++ b/indexold.html
@@ -19,45 +19,41 @@
     <nav class="navbar" role="navigation">
         <button class="button_hidden">
             <h1><i class="fa fa-bars" aria-hidden="true"></i></h1></button>
-        <div class="nav-left">
-            <ul class="menu_button">
-                <li>
-                    <a href="index.html">
-                        <i class="fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html">
-                        <i class="fa fa-download" aria-hidden="true"></i>&nbsp&nbspЗагрузки
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html">
-                        <i class="fa fa-bolt" aria-hidden="true"></i>&nbsp&nbspПоддержка
-                    </a>
-                </li>
-                <li>
-                    <a href="index.html">
-                        <i class="fa fa-book" aria-hidden="true"></i>&nbsp&nbspКниги
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div class = "nav-right">
-            <ul class="">
-                <li><a class= "button_header" href="#">Вход</a></li>
-                <li><a class= "button_header" href="#">Регистрация</a></li>
-            </ul>
-        </div>
+        <ul class="menu_button">
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-download" aria-hidden="true"></i>&nbsp&nbspЗагрузки
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-bolt" aria-hidden="true"></i>&nbsp&nbspПоддержка
+                </a>
+            </li>
+            <li>
+                <a href="index.html">
+                    <i class="fa fa-book" aria-hidden="true"></i>&nbsp&nbspКниги
+                </a>
+            </li>
+        </ul>
+        <ul class="nav-right">
+            <li><a href="#">lll</a></li>
+            <li><a href="#">lll</a></li>
+        </ul>
     </nav>
     <!-- </div> -->
     <header class="fluid-bg">
         <div class="container">
             <div class="row">
                 <div class="cols col-4">
-                    <h1>Мой сайт</h1>
-                    <p>словесными горами в стране, гласных и согласных живут</p>
-                    <a class="button_header" href="#" role="button">Cвободная регистрация</a>
+                    <h1>My site</h1>
+                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                    <a class="batton_header" href="#" role="button">Sign up for Free!</a>
                 </div>
                 <div class="cols col-8">
                 </div>
