--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                 </li>
             </ul>
         </div>
-        <div class = "nav-right">
+        <div class="nav-right">
             <ul class="">
-                <li><a class= "button_header" href="#">Вход</a></li>
-                <li><a class= "button_header" href="#">Регистрация</a></li>
+                <li><a class="button_header" href="#">Вход</a></li>
+                <li><a class="button_header" href="#">Регистрация</a></li>
             </ul>
         </div>
     </nav>
@@ -68,18 +68,54 @@
     <div class="content">
         <div class="container">
             <div class="row">
-                <div class="col-3 cols">
-                    <h2>Подзаголовок</h2>
-                    <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Ему несколько, рот залетают знаках жизни проектах, вершину по всей переписали переписывается домах за от всех власти парадигматическая путь назад, они обеспечивает!</p>
-                    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Non deserunt, sunt animi magnam dolore fugiat optio rem quia accusantium, architecto quas aliquam ullam tenetur doloribus dignissimos nisi. Architecto, distinctio, eligendi.</div>
-                    <div>Consequatur officiis distinctio esse eaque enim laudantium inventore error velit odit repellendus aspernatur quas libero quaerat praesentium dignissimos alias quo rem tempore, architecto dicta quam animi accusamus qui? Distinctio, officia.</div>
-                    <div>Ipsa optio obcaecati totam. Architecto similique maiores itaque quaerat mollitia accusantium, obcaecati ea minus nemo. Tenetur ab distinctio ullam excepturi cum impedit iure eaque blanditiis, aliquid voluptates ipsum, est nisi.</div>
-                    <div>Autem, debitis quaerat dignissimos reiciendis non labore ipsa ab repellendus. A odit est inventore nobis placeat velit laboriosam accusamus, tempore modi, odio saepe facere iste delectus deserunt sequi! Quae, vitae.</div>
-                    <div>Vel deleniti eos natus voluptas, officiis quibusdam vero iure, consequuntur odio, atque voluptate delectus vitae rem aliquam alias ipsum necessitatibus perferendis! Quisquam quasi ad itaque ut fugit reiciendis maiores, praesentium.</div>
+                <div class="col-12 cols">
+                    <h1>Мой сайт</h1>
+                    <br>
+                    <br>
                 </div>
+            </div>
+            <div class="row">
                 <div class="col-9 cols">
-                    <h2>main</h2>
-                    <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Ему несколько, рот залетают знаках жизни проектах, вершину по всей переписали переписывается домах за от всех власти парадигматическая путь назад, они обеспечивает!</p>
+                    <div class="row">
+                        <div class="cols col-4">
+                            <img src="img/200.jpg" alt="">
+                        </div>
+                        <div class="cols col-8">
+                            Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Несколько реторический залетают путь составитель ее, раз на берегу она над страну переулка правилами, свою пустился маленькая которой заголовок, снова деревни!
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cols col-4">
+                            <img src="img/dog.jpg" alt="">
+                        </div>
+                        <div class="cols col-8">
+                            Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Несколько реторический залетают путь составитель ее, раз на берегу она над страну переулка правилами, свою пустился маленькая которой заголовок, снова деревни!
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cols col-4">
+                            <img src="img/2001.jpg" alt="">
+                        </div>
+                        <div class="cols col-8">
+                            Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Несколько реторический залетают путь составитель ее, раз на берегу она над страну переулка правилами, свою пустился маленькая которой заголовок, снова деревни!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 cols">
+                    <!-- <section class="form-wrapper">
+                        <form action="" method="">
+                            <input type="search" placeholder="искать">
+                            <button>Поиск</button>
+
+                        </form> -->
+                    <!-- </section> -->
+                    <!-- <form class="form-wrapper">
+                        <input type="text" id="search" placeholder="Search for..." required>
+                        <input type="submit" value="go" id="submit">
+                    </form> -->
+                    <input type="search" placeholder="искать">
+                            <button>Поиск</button>
+                    <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit deleniti consequatur sequi officiis nesciunt labore aspernatur magnam iusto tempora, velit molestiae! Velit assumenda aperiam, dolore, perspiciatis molestias quae et laudantium.
                 </div>
             </div>
         </div>
