--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="button_hidden">
             <h1><i class="fa fa-bars" aria-hidden="true"></i></h1></button>
         <div class="nav-left">
-            <ul class="menu_button">
+            <ul class="nav_button">
                 <li>
                     <a href="index.html">
                         <i class="fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
@@ -55,7 +55,7 @@
         <div class="container">
             <div class="row">
                 <div class="cols col-4">
-                    <h1>Мой сайт</h1>
+                    <h3>Мой сайт</h3>
                     <p>словесными горами в стране, гласных и согласных живут</p>
                     <a class="button_header" href="#" role="button">Cвободная регистрация</a>
                 </div>
@@ -96,26 +96,28 @@
                         <div class="cols col-4">
                             <img src="img/2001.jpg" alt="">
                         </div>
-                        <div class="cols col-8">
+                        <div class="cols col-8 some">
                             Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Несколько реторический залетают путь составитель ее, раз на берегу она над страну переулка правилами, свою пустился маленькая которой заголовок, снова деревни!
                         </div>
                     </div>
                 </div>
                 <div class="col-3 cols">
-                    <!-- <section class="form-wrapper">
-                        <form action="" method="">
+                    <section class="form-wrapper">
+                        <form action="" method="post" id="search-site">
                             <input type="search" placeholder="искать">
-                            <button>Поиск</button>
-
-                        </form> -->
-                    <!-- </section> -->
-                    <!-- <form class="form-wrapper">
-                        <input type="text" id="search" placeholder="Search for..." required>
-                        <input type="submit" value="go" id="submit">
-                    </form> -->
-                    <input type="search" placeholder="искать">
-                            <button>Поиск</button>
-                    <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit deleniti consequatur sequi officiis nesciunt labore aspernatur magnam iusto tempora, velit molestiae! Velit assumenda aperiam, dolore, perspiciatis molestias quae et laudantium.
+                            <button><i class="fa fa-search" aria-hidden="true"></i>
+                            </button>
+                        </form>
+                    </section>
+                       <!--  <button>
+                            <a href="#signupForm">Sign up for our newsletter</a> </button>
+                        <form id="signupForm">
+                            <label for="email">What's your email address?</label>
+                            <input type="email" id="email">
+                            <input class="btn" type="submit" value="Sign up"> </form> -->
+                    <br>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit deleniti consequatur sequi officiis nesciunt labore aspernatur magnam iusto tempora, velit molestiae! Velit assumenda aperiam, dolore, perspiciatis molestias quae et laudantium.
+                    </p>
                 </div>
             </div>
         </div>
