--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
     </nav>
     <!-- </div> -->
     <header class="fluid-bg">
-        <div class="container">
+        <div class="container header-bl-bottom">
             <div class="row">
-                <div class="cols col-4">
+                <div class="cols col-12 ">
                     <h3>Мой сайт</h3>
-                    <p>словесными горами в стране, гласных и согласных живут</p>
-                    <a class="button_header" href="#" role="button">Cвободная регистрация</a>
+                    <p>словесными горами в стране живут</p>
+                    <a class="button_header" href="#" role="button">Подпишись!</a>
                 </div>
-                <div class="cols col-8">
-                </div>
+                <!-- <div class="cols col-8">
+                </div> -->
             </div>
         </div>
     </header>
@@ -123,11 +123,13 @@
         </div>
     </div>
     <footer>
-        <ul>
-            <li>footer</li>
-            <li>footer</li>
-            <li>footer</li>
-        </ul>
+        <cite>
+
+Oscar Wilde,
+
+The Picture of Dorian Gray
+
+</cite>
     </footer>
     <!-- </div> -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
