--- a/index.html
+++ b/index.html
@@ -57,11 +57,15 @@
                 <div class="cols col-12 ">
                     <h3>Мой сайт</h3>
                     <p>словесными горами в стране живут</p>
-                    <a class="button_header" href="#" role="button">Подпишись!</a>
+                    <ul class="social">
+                        <li><a class="button_header" href="#" role="button"><i class="fa fa-twitter fa-fw"></i>twitter</a></li>
+                        <li><a class="button_header" href="#" role="button"><i class="fa fa-github fa-fw"></i>github</a></li>
+                    </ul>
                 </div>
                 <!-- <div class="cols col-8">
                 </div> -->
             </div>
+            <div class="row"></div>
         </div>
     </header>
     <!-- <img src="http://lorempixel.com/1680/600/sports/3" alt="alt"> -->
