--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
             <ul class="nav_button">
                 <li>
                     <a href="index.html">
-                        <i class="fa fa-home" aria-hidden="true"></i>&nbsp&nbspГлавная
+                        <i class="fa fa-home" aria-hidden="true"></i>Главная
                     </a>
                 </li>
                 <li>
                     <a href="index.html">
-                        <i class="fa fa-download" aria-hidden="true"></i>&nbsp&nbspЗагрузки
+                        <i class="fa fa-download" aria-hidden="true"></i>Загрузки
                     </a>
                 </li>
                 <li>
                     <a href="index.html">
-                        <i class="fa fa-bolt" aria-hidden="true"></i>&nbsp&nbspПоддержка
+                        <i class="fa fa-bolt" aria-hidden="true"></i>Поддержка
                     </a>
                 </li>
                 <li>
                     <a href="index.html">
-                        <i class="fa fa-book" aria-hidden="true"></i>&nbsp&nbspКниги
+                        <i class="fa fa-book" aria-hidden="true"></i>Книги
                     </a>
                 </li>
             </ul>
@@ -51,15 +51,16 @@
         </div>
     </nav>
     <!-- </div> -->
-    <header class="fluid-bg">
+    <header class="header_bg">
         <div class="container header-bl-bottom">
             <div class="row">
                 <div class="cols col-12 ">
                     <h3>Мой сайт</h3>
                     <p>словесными горами в стране живут</p>
-                    <ul class="social">
-                        <li><a class="button_header" href="#" role="button"><i class="fa fa-twitter fa-fw"></i>twitter</a></li>
-                        <li><a class="button_header" href="#" role="button"><i class="fa fa-github fa-fw"></i>github</a></li>
+                    <ul class="fa-ul social">
+                        <li><a class="button_header" href="https://twitter.com/?lang=ru" role="button"><i class="fa fa-twitter fa-fw"></i>twitter</a></li>
+                        <li><a class="button_header" href="https://vk.com/" role="button"><i class="fa fa-vk" aria-hidden="true"></i>в контакте</a></li>
+                        <li><a class="button_header" href="https://github.com/" role="button"><i class="fa fa-github fa-fw"></i>github</a></li>
                     </ul>
                 </div>
                 <!-- <div class="cols col-8">
@@ -126,15 +127,21 @@
             </div>
         </div>
     </div>
-    <footer>
-        <cite>
-
-Oscar Wilde,
-
-The Picture of Dorian Gray
-
-</cite>
-    </footer>
+    <div class="row">
+                <div class="col-12">
+                    <footer>
+                        <ul>
+                            <li><a href="#"><i class="fa fa-vk fa-lg" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-envelope fa-lg" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-facebook fa-lg" aria-hidden="true"></i></a></li>
+                            <li><a href="https://github.com"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-google-plus fa-lg" aria-hidden="true"></i></a></li>
+                            <li><a href="https://codepen.io"><i class="fa fa-codepen fa-lg" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </footer>
+                </div>
+            </div>
     <!-- </div> -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="js/site.js"></script>
